# samples/server/petstore/rust-server/output/rust-server-test/api/openapi.yaml
@@ -17,7 +17,7 @@ paths:
     put:
       operationId: dummyPut
       requestBody:
-        $ref: '#/components/requestBodies/inline_object'
+        $ref: '#/components/requestBodies/nested_response'
         content:
           '*/*':
             schema:
@@ -135,20 +135,7 @@ components:
       content:
         '*/*':
           schema:
-            properties:
-              id:
-                type: string
-              password:
-                type: string
-            required:
-            - id
-            type: object
-      required: true
-    inline_object:
-      content:
-        '*/*':
-          schema:
-            $ref: '#/components/schemas/inline_object'
+            $ref: '#/components/schemas/nested_response'
       required: true
   schemas:
     additionalPropertiesObject:
@@ -194,7 +181,7 @@ components:
           description: Inner string
           type: string
       type: object
-    inline_object:
+    nested_response:
       properties:
         id:
           type: string
